# monotub

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: daily_run.yml  self_hosted.yml
docs/: docker.md  localActions.md  monotub_control.md  raspPi.md
monotub_control/: DHT22Sensor.cpp  DHT22Sensor.h  SHT41Sensor.cpp  SHT41Sensor.h  globals.h  humiditySensor.h  logger.cpp  logger.h  monotub_control.ino
notes/: note.ipynb
scripts/: build_and_push_container.sh  compile_upload_arduino.sh  setup_virtual_env.sh  update_requirements.sh
src/: core.py  main.py  monotub.py
tests/: test_core.py
