[project]
name = "PythonTemplate"         
version = "0.1.0"       # Versión inicial
description = "Just a Python template project"
authors = [
    { name="Arturo González", email="arturo.gonzalez@argonur.com" }
]
readme = "README.md"
requires-python = ">=3.10"

# -----------------------------------------------
# Dependencias obligatorias para que la app funcione
# Por ejemplo: pandas, numpy, yfinance
# Puedes dejarlo vacío por ahora y usar requirements.txt
# -----------------------------------------------
dependencies = [
    # "pandas>=1.5.0",
    # "yfinance>=0.2.0"
]

# -----------------------------------------------
# Dependencias opcionales para desarrollo
# Incluye herramientas como pytest, black, mypy, etc.
# Se instalan con: pip install -e ".[dev]"
# -----------------------------------------------
[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0"
]

# -----------------------------------------------
# Configuración para setuptools (para que busque paquetes dentro de src/)
# -----------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# -----------------------------------------------
# Metadata adicional para build
# -----------------------------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------------------------
# Configuración de pytest
# -----------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=70"

# -----------------------------------------------
# Configuración de coverage
# -----------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "*/main.py",
    "*/__init__.py",
    "*/tests/*",
    "*/__pycache__/*"
]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true